# AbstractiveKG-NLP

./: .gitignore  ARCHITECTURE.md  DOCKER_TROUBLESHOOTING.md  README.md  app.py  demo.py  docker-compose.yml  main.py  pyproject.toml
src/: data_loader.py  evaluation.py  graph_db.py  graph_rag.py  ner_re.py  pipeline.py  summarizer.py
src/abstractivekg_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
